Initial commit: Microservices architecture with Auth, Listing, Booking, Payment services + Gateway + CORS fixes v11